--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         <h2>
             Mis redes sociales:
         </h2>
+        <nav>
         <ul>
-            <li><a href="https://www.instagram.com/r.ronm/" target="_blank"><b>Instagram</b></a>: @r.ronm</li>
-            <li><a href="https://www.facebook.com/profile.php?id=100077362208423" target="_blank"><b>Facebook</b></a>: Ulises Molina</li>
-            <li><a href="https://discord.com/channels/@me" target="_blank"><b>Discord</b></a>: Ulisses#5979</li>
-            <li><a href="https://twitter.com/tensa_07" target="_blank"><b>Twitter</b></a>: @tensa_07</li>
+            <li><b>Instagram</b>:<a href="https://www.instagram.com/r.ronm/" target="_blank"> @r.ronm</a></li>
+            <li><b>Facebook</b>:<a href="https://www.facebook.com/profile.php?id=100077362208423" target="_blank"> Ulises Molina</a></li>
+            <li><b>Discord</b>:<a href="https://discord.com/channels/@me" target="_blank"> Ulisses#5979</a></li>
+            <li><b>Twitter</b>:<a href="https://twitter.com/tensa_07" target="_blank"> @tensa_07</a></li>
         </ul>
+        </nav>
     </div>
     <br/>
 <div>
